--- a/views/index.html
+++ b/views/index.html
@@ -140,15 +140,11 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                      expedita aperiam aliquid at.
-                      Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                      mollitia inventore?
+                      I am available for consulting work, remote. Drop me a line if need more information about my services or wish to get a quote.
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                      <li><span class="ion-ios-telephone"></span> (617) 557-0089</li>
-                      <li><span class="ion-email"></span> contact@example.com</li>
+                      <li><span class="ion-ios-location"></span> Crisan 25, Drobeta-Turnu Severin, Romania</li>
+                      <li><span class="ion-email"></span> morion4000@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
