--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -8,15 +8,14 @@
               <div class="row">
                 <div class="col-sm-6 col-md-5">
                   <div class="about-img">
-                    <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                    <img src="/assets/img/avatar4.jpg" class="img-fluid rounded b-shadow-a" alt="">
                   </div>
                 </div>
                 <div class="col-sm-6 col-md-7">
                   <div class="about-info">
-                    <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                    <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                    <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                    <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                    <p><span class="title-s">Name: </span> <span>Ionut Moraru</span></p>
+                    <p><span class="title-s">Profile: </span> <span>Web and Blockchain developer</span></p>
+                    <p><span class="title-s">Email: </span> <span><a href="mailto:morion4000@gmail.com">morion4000@gmail.com</a></span></p>
                   </div>
                 </div>
               </div>
@@ -52,20 +51,13 @@
                   </h5>
                 </div>
                 <p class="lead">
-                  Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                  imperdiet et, porttitor
-                  at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                  porttitor accumsan tincidunt.
+                  I am a seasoned software developer with over ten years of experience in full-stack web development and systems architecture that has worked with technologies ranging from mobile to web and desktop.
                 </p>
                 <p class="lead">
-                  Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                  porttitor volutpat. Vestibulum
-                  ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                  Currently, I am interested in Blockchain technologies, smart contracts, automation, and IT infrastructure, and got certified in Solidity development by Consensys.
                 </p>
                 <p class="lead">
-                  Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                  Nulla porttitor accumsan
-                  tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                  I have experience in working with the Ethereum and the Web3 stack, as well as working with open source projects.
                 </p>
               </div>
             </div>
