--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -7,7 +7,7 @@
             Portfolio
           </h3>
           <p class="subtitle-a">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            List with my projects.
           </p>
           <div class="line-mf"></div>
         </div>
@@ -16,16 +16,16 @@
     <div class="row">
       <div class="col-md-4">
         <div class="work-box">
-          <a href="assets/img/work-1.jpg" data-lightbox="gallery-mf">
+          <a href="/assets/img/hostero-1.png" data-lightbox="gallery-mf">
             <div class="work-img">
-              <img src="assets/img/work-1.jpg" alt="" class="img-fluid">
+              <img src="/assets/img/hostero-1.png" alt="" class="img-fluid">
             </div>
             <div class="work-content">
               <div class="row">
                 <div class="col-sm-8">
-                  <h2 class="w-title">Lorem impsum dolor</h2>
+                  <h2 class="w-title">Hostero</h2>
                   <div class="w-more">
-                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                    <span class="w-ctegory">Product Development</span> / <span class="w-date">May 2018</span>
                   </div>
                 </div>
                 <div class="col-sm-4">
@@ -40,16 +40,16 @@
       </div>
       <div class="col-md-4">
         <div class="work-box">
-          <a href="assets/img/work-2.jpg" data-lightbox="gallery-mf">
+          <a href="/assets/img/molamp-1.png" data-lightbox="gallery-mf">
             <div class="work-img">
-              <img src="assets/img/work-2.jpg" alt="" class="img-fluid">
+              <img src="/assets/img/molamp-1.png" alt="" class="img-fluid">
             </div>
             <div class="work-content">
               <div class="row">
                 <div class="col-sm-8">
-                  <h2 class="w-title">Loreda Cuno Nere</h2>
+                  <h2 class="w-title">Molamp</h2>
                   <div class="w-more">
-                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                    <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan. 2016</span>
                   </div>
                 </div>
                 <div class="col-sm-4">
@@ -64,88 +64,16 @@
       </div>
       <div class="col-md-4">
         <div class="work-box">
-          <a href="assets/img/work-3.jpg" data-lightbox="gallery-mf">
+          <a href="/assets/img/webdollar-1.png" data-lightbox="gallery-mf">
             <div class="work-img">
-              <img src="assets/img/work-3.jpg" alt="" class="img-fluid">
+              <img src="/assets/img/webdollar-1.png" alt="" class="img-fluid">
             </div>
             <div class="work-content">
               <div class="row">
                 <div class="col-sm-8">
-                  <h2 class="w-title">Mavrito Lana Dere</h2>
+                  <h2 class="w-title">WebDollar</h2>
                   <div class="w-more">
-                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="w-like">
-                    <span class="ion-ios-plus-outline"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="work-box">
-          <a href="assets/img/work-4.jpg" data-lightbox="gallery-mf">
-            <div class="work-img">
-              <img src="assets/img/work-4.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="work-content">
-              <div class="row">
-                <div class="col-sm-8">
-                  <h2 class="w-title">Bindo Laro Cado</h2>
-                  <div class="w-more">
-                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="w-like">
-                    <span class="ion-ios-plus-outline"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="work-box">
-          <a href="assets/img/work-5.jpg" data-lightbox="gallery-mf">
-            <div class="work-img">
-              <img src="assets/img/work-5.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="work-content">
-              <div class="row">
-                <div class="col-sm-8">
-                  <h2 class="w-title">Studio Lena Mado</h2>
-                  <div class="w-more">
-                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="w-like">
-                    <span class="ion-ios-plus-outline"></span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="work-box">
-          <a href="assets/img/work-6.jpg" data-lightbox="gallery-mf">
-            <div class="work-img">
-              <img src="assets/img/work-6.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="work-content">
-              <div class="row">
-                <div class="col-sm-8">
-                  <h2 class="w-title">Studio Big Bang</h2>
-                  <div class="w-more">
-                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2017</span>
+                    <span class="w-ctegory">Software Development</span> / <span class="w-date">Sep. 2018</span>
                   </div>
                 </div>
                 <div class="col-sm-4">
