--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -14,31 +14,46 @@
                 <div class="col-sm-6 col-md-7">
                   <div class="about-info">
                     <p><span class="title-s">Name: </span> <span>Ionut Moraru</span></p>
-                    <p><span class="title-s">Profile: </span> <span>Web and Blockchain developer</span></p>
+                    <p><span class="title-s">Profile: </span> <span>Software developer</span></p>
                     <p><span class="title-s">Email: </span> <span><a href="mailto:morion4000@gmail.com">morion4000@gmail.com</a></span></p>
                   </div>
                 </div>
               </div>
               <div class="skill-mf">
-                <p class="title-s">Skill</p>
-                <span>HTML</span> <span class="pull-right">85%</span>
+                <p class="title-s">Skills</p>
+                <span>Javascript (Node.js)</span> <span class="pull-right">90%</span>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>CSS3</span> <span class="pull-right">75%</span>
+                <span>Python (Django)</span> <span class="pull-right">60%</span>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>PHP</span> <span class="pull-right">50%</span>
+                <span>Solidity</span> <span class="pull-right">50%</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                <span>AngularJS</span> <span class="pull-right">80%</span>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+                <span>React</span> <span class="pull-right">40%</span>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+                <span>Databases (SQL)</span> <span class="pull-right">70%</span>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+                <span>Microservices (Docker)</span> <span class="pull-right">80%</span>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
               </div>
