--- a/views/partials/services.html
+++ b/views/partials/services.html
@@ -7,7 +7,7 @@
             Services
           </h3>
           <p class="subtitle-a">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Areas I am proficient in.
           </p>
           <div class="line-mf"></div>
         </div>
@@ -17,29 +17,12 @@
       <div class="col-md-4">
         <div class="service-box">
           <div class="service-ico">
-            <span class="ico-circle"><i class="ion-monitor"></i></span>
-          </div>
-          <div class="service-content">
-            <h2 class="s-title">Web Design</h2>
-            <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-box">
-          <div class="service-ico">
             <span class="ico-circle"><i class="ion-code-working"></i></span>
           </div>
           <div class="service-content">
-            <h2 class="s-title">Web Development</h2>
+            <h2 class="s-title">Software Development</h2>
             <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
+              Full stack web applications, APIs and automation.
             </p>
           </div>
         </div>
@@ -47,25 +30,37 @@
       <div class="col-md-4">
         <div class="service-box">
           <div class="service-ico">
-            <span class="ico-circle"><i class="ion-camera"></i></span>
+            <span class="ico-circle"><i class="ion-monitor"></i></span>
           </div>
           <div class="service-content">
-            <h2 class="s-title">Photography</h2>
+            <h2 class="s-title">DevOps</h2>
             <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
+              Cloud computing, microservices, virtualisation and containerisation.
             </p>
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="service-box">
+          <div class="service-ico">
+            <span class="ico-circle"><i class="ion-link"></i></span>
+          </div>
+          <div class="service-content">
+            <h2 class="s-title">Blockchain</h2>
+            <p class="s-description text-center">
+              Ethereum (Solidity), infrastructure, and DeFi.
+            </p>
+          </div>
+        </div>
+      </div>
+      <!--
       <div class="col-md-4">
         <div class="service-box">
           <div class="service-ico">
             <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
           </div>
           <div class="service-content">
-            <h2 class="s-title">Responsive Design</h2>
+            <h2 class="s-title">Product Development</h2>
             <p class="s-description text-center">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
               provident vitae! Magni
@@ -74,36 +69,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="service-box">
-          <div class="service-ico">
-            <span class="ico-circle"><i class="ion-paintbrush"></i></span>
-          </div>
-          <div class="service-content">
-            <h2 class="s-title">Graphic Design</h2>
-            <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="service-box">
-          <div class="service-ico">
-            <span class="ico-circle"><i class="ion-stats-bars"></i></span>
-          </div>
-          <div class="service-content">
-            <h2 class="s-title">Marketing Services</h2>
-            <p class="s-description text-center">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-              provident vitae! Magni
-              tempora perferendis eum non provident.
-            </p>
-          </div>
-        </div>
-      </div>
+      -->
     </div>
   </div>
 </section>
