--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -1,9 +1,9 @@
-<title>morion4000.com</title>
+<title>morion4000.com - Ionut Moraru</title>
 <meta charset="utf-8">
 
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="" name="keywords">
-<meta content="" name="description">
+<meta content="software, developer, full stack, web, development, architecture" name="keywords">
+<meta content="Seasoned software developer with over ten years of experience in full-stack web development and systems architecture" name="description">
 
 <!-- Favicons -->
 <link href="/assets/img/favicon.png" rel="icon">
