--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">Hi, I am Ionut Moraru</h1>
+          <h1 class="intro-title mb-4">Hi, I'm Ionut Moraru</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Web and Blockchain developer</span><strong class="text-slider"></strong></p>
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume</a></p>
         </div>
@@ -82,10 +82,9 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
+                      <li><a href="https://github.com/morion4000" target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://twitter.com/morion4000" target="_blank"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/morion" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
@@ -101,15 +100,9 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; Copyright <strong>Ionut Moraru</strong>. All Rights Reserved</p>
+              <p class="copyright">&copy; 2020 <strong>Ionut Moraru</strong>. All Rights Reserved.</p>
               <div class="credits">
-                <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-                -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                <a href="https://old.morion4000.com">Old version</a>
               </div>
             </div>
           </div>
