--- a/views/index.html
+++ b/views/index.html
@@ -15,8 +15,8 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Hi, I'm Ionut Moraru</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Web and Blockchain developer</span><strong class="text-slider"></strong></p>
-          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume</a></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Web and Blockchain Developer</span><strong class="text-slider"></strong></p>
+          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">Resume</a></p>
         </div>
       </div>
     </div>
