--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -14,7 +14,7 @@
                 <div class="col-sm-6 col-md-7">
                   <div class="about-info">
                     <p><span class="title-s">Name: </span> <span>Ionut Moraru</span></p>
-                    <p><span class="title-s">Profile: </span> <span>Software developer</span></p>
+                    <p><span class="title-s">Profile: </span> <span>Software Developer</span></p>
                     <p><span class="title-s">Email: </span> <span><a href="mailto:morion4000@gmail.com">morion4000@gmail.com</a></span></p>
                   </div>
                 </div>
