--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -66,7 +66,7 @@
                   </h5>
                 </div>
                 <p class="lead">
-                  I am a seasoned software developer with over ten years of experience in full-stack web development and systems architecture that has worked with technologies ranging from mobile to web and desktop.
+                  Seasoned software developer with over ten years of experience in full-stack web development and systems architecture, that has worked with technologies ranging from mobile to web and desktop.
                 </p>
                 <p class="lead">
                   Currently, I am interested in Blockchain technologies, smart contracts, automation, and IT infrastructure, and got certified in Solidity development by Consensys.
