--- a/views/index.html
+++ b/views/index.html
@@ -73,11 +73,11 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      I am available for consulting work, remote. Drop me a line if need more information about my services or wish to get a quote.
+                      I am available for consulting work, remotely. Drop me a line if need more information about my services or wish to get a quote.
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Crisan 25, Drobeta-Turnu Severin, Romania</li>
-                      <li><span class="ion-email"></span> morion4000@gmail.com</li>
+                      <li><span class="ion-email"></span> <a href="mailto:morion4000@gmail.com">morion4000@gmail.com</a></li>
                     </ul>
                   </div>
                   <div class="socials">
