--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -17,25 +17,27 @@
       <div class="col-md-4">
         <div class="work-box">
           <a href="/assets/img/hostero-1.png" data-lightbox="gallery-mf">
-            <div class="work-img">
-              <img src="/assets/img/hostero-1.png" alt="" class="img-fluid">
-            </div>
-            <div class="work-content">
-              <div class="row">
-                <div class="col-sm-8">
-                  <h2 class="w-title">Hostero</h2>
-                  <div class="w-more">
-                    <span class="w-ctegory">Product Development</span> / <span class="w-date">May 2018</span>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="w-like">
-                    <span class="ion-ios-plus-outline"></span>
-                  </div>
+          <div class="work-img">
+            <img src="/assets/img/hostero-1.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Hostero</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Product Development</span> / <span class="w-date">May 2018</span>
                 </div>
               </div>
+              <div class="col-sm-4">
+                <a href="https://www.hostero.eu" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
             </div>
-          </a>
+          </div>
         </div>
       </div>
       <div class="col-md-4">
@@ -44,22 +46,24 @@
             <div class="work-img">
               <img src="/assets/img/molamp-1.png" alt="" class="img-fluid">
             </div>
-            <div class="work-content">
-              <div class="row">
-                <div class="col-sm-8">
-                  <h2 class="w-title">Molamp</h2>
-                  <div class="w-more">
-                    <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan. 2016</span>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="w-like">
-                    <span class="ion-ios-plus-outline"></span>
-                  </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Molamp</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan. 2016</span>
                 </div>
               </div>
+              <div class="col-sm-4">
+                <a href="https://www.molamp.net" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
             </div>
-          </a>
+          </div>
         </div>
       </div>
       <div class="col-md-4">
@@ -68,22 +72,24 @@
             <div class="work-img">
               <img src="/assets/img/webdollar-1.png" alt="" class="img-fluid">
             </div>
-            <div class="work-content">
-              <div class="row">
-                <div class="col-sm-8">
-                  <h2 class="w-title">WebDollar</h2>
-                  <div class="w-more">
-                    <span class="w-ctegory">Software Development</span> / <span class="w-date">Sep. 2018</span>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="w-like">
-                    <span class="ion-ios-plus-outline"></span>
-                  </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">WebDollar Tools</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Sep. 2018</span>
                 </div>
               </div>
+              <div class="col-sm-4">
+                <a href="https://www.hostero.eu/tools" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
             </div>
-          </a>
+          </div>
         </div>
       </div>
 
