--- a/views/partials/services.html
+++ b/views/partials/services.html
@@ -48,7 +48,7 @@
           <div class="service-content">
             <h2 class="s-title">Blockchain</h2>
             <p class="s-description text-center">
-              Ethereum (Solidity), infrastructure, and DeFi.
+              Ethereum (Solidity), Web3 stack, infrastructure, and DeFi.
             </p>
           </div>
         </div>
