--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -66,13 +66,13 @@
                   </h5>
                 </div>
                 <p class="lead">
-                  Seasoned software developer with over ten years of experience in full-stack web development and systems architecture, that has worked with technologies ranging from mobile to web and desktop.
+                  Seasoned software developer with over ten years of experience in full-stack web development and systems architecture. I have worked on platforms ranging from mobile to web and desktop.
                 </p>
                 <p class="lead">
-                  Currently, I am interested in Blockchain technologies, smart contracts, automation, and IT infrastructure, and got certified in Solidity development by Consensys.
+                  My current interests are Blockchain technologies, smart contracts, automation, and IT infrastructure. I got certified in Solidity development by <a href="https://consensys.net/academy/onlineprograms/" target="_blank">ConsenSys Academy Online Developer Program</a> in 2018.
                 </p>
                 <p class="lead">
-                  I have experience in working with the Ethereum and the Web3 stack, as well as working with open source projects.
+                  I consider myself to be a hard-working generalist who operates autonomously and has high risk tolerance.
                 </p>
               </div>
             </div>
