--- a/views/index.html
+++ b/views/index.html
@@ -73,7 +73,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      I am available for consulting work, remotely. Drop me a line if need more information about my services or wish to get a quote.
+                      I am available for consulting work. Drop me a line if you need more information about my services or wish to get a quote.
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Crisan 25, Drobeta-Turnu Severin, Romania</li>
@@ -102,7 +102,7 @@
             <div class="copyright-box">
               <p class="copyright">&copy; 2020 <strong>Ionut Moraru</strong>. All Rights Reserved.</p>
               <div class="credits">
-                <a href="https://old.morion4000.com">Old version</a>
+                <a href="https://old.morion4000.com">Old site</a>
               </div>
             </div>
           </div>
