--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -7,7 +7,7 @@
 
 <!-- Favicons -->
 <link href="/assets/img/favicon.png" rel="icon">
-<link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<link href="/assets/img/avatar4.png" rel="apple-touch-icon">
 
 <!-- Bootstrap CSS File -->
 <link href="/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
