--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -16,6 +16,58 @@
     <div class="row">
       <div class="col-md-4">
         <div class="work-box">
+          <a href="/assets/img/emint-1.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/img/emint-1.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Emint</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan 2020</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://www.emint.io" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
+          <a href="/assets/img/webdollar-1.png" data-lightbox="gallery-mf">
+            <div class="work-img">
+              <img src="/assets/img/webdollar-1.png" alt="" class="img-fluid">
+            </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">WebDollar Tools</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Feb. 2019</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://www.hostero.eu/tools" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
           <a href="/assets/img/hostero-1.png" data-lightbox="gallery-mf">
           <div class="work-img">
             <img src="/assets/img/hostero-1.png" alt="" class="img-fluid">
@@ -52,7 +104,7 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Molamp</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan. 2016</span>
+                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Feb. 2016</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -66,33 +118,6 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div class="work-box">
-          <a href="/assets/img/webdollar-1.png" data-lightbox="gallery-mf">
-            <div class="work-img">
-              <img src="/assets/img/webdollar-1.png" alt="" class="img-fluid">
-            </div>
-          </a>
-          <div class="work-content">
-            <div class="row">
-              <div class="col-sm-8">
-                <h2 class="w-title">WebDollar Tools</h2>
-                <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Feb. 2019</span>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <a href="https://www.hostero.eu/tools" target="_blank">
-                  <div class="w-like">
-                    <span class="ion-log-in"></span>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
   </div>
 </section>
