--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -7,7 +7,7 @@
             Portfolio
           </h3>
           <p class="subtitle-a">
-            List with my most notable projects.
+            List with personal projects.
           </p>
           <div class="line-mf"></div>
         </div>
