--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 <body id="page-top">
   {{> partials/header }}
 
-  <div id="home" class="intro route bg-image" style="background-color: black">
+  <div id="home" class="intro route bg-image" style="background-image: url('/assets/img/overlay-bg.jpg')">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
