--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -118,6 +118,32 @@
           </div>
         </div>
       </div>
+      <div class="col-md-4">
+        <div class="work-box">
+          <a href="/assets/img/swargame-1.jpg" data-lightbox="gallery-mf">
+            <div class="work-img">
+              <img src="/assets/img/swargame-1.jpg" alt="" class="img-fluid">
+            </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">SwarGame</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Aug. 2007</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://ro.wikipedia.org/wiki/Swargame" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
