--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,7 @@
 
   {{> partials/about }}
   {{> partials/services }}
+  {{> partials/statistics }}
   {{> partials/projects }}
 
   <!--/ Section Contact-Footer Star /-->
