--- a/views/partials/services.html
+++ b/views/partials/services.html
@@ -7,7 +7,7 @@
             Services
           </h3>
           <p class="subtitle-a">
-            Areas I am most proficient in. Only up-to-date, reliable, and effective skills are included.
+            Areas I am most proficient in.
           </p>
           <div class="line-mf"></div>
         </div>
