--- a/views/partials/scripts.html
+++ b/views/partials/scripts.html
@@ -14,3 +14,13 @@
 
 <!-- Template Main Javascript File -->
 <script src="/assets/js/main.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-16309384-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-16309384-1');
+</script>
