--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -72,7 +72,7 @@
                   My current interests are Blockchain technologies, smart contracts, automation, and IT infrastructure. I got certified in Solidity development by <a href="https://consensys.net/academy/onlineprograms/" target="_blank">ConsenSys Academy Online Developer Program</a> in 2018.
                 </p>
                 <p class="lead">
-                  I consider myself to be a hard-working generalist who operates autonomously and has high risk tolerance.
+                  I consider myself to be a hard-working generalist who operates autonomously and has high-risk tolerance.
                 </p>
               </div>
             </div>
