--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -16,6 +16,32 @@
     <div class="row">
       <div class="col-md-4">
         <div class="work-box">
+          <a href="/assets/img/javascript-blockchain-2.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/img/javascript-blockchain-2.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Javascript Blockchain</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Jan 2020</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://www.emint.io" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
           <a href="/assets/img/emint-1.png" data-lightbox="gallery-mf">
           <div class="work-img">
             <img src="/assets/img/emint-1.png" alt="" class="img-fluid">
@@ -57,6 +83,32 @@
               </div>
               <div class="col-sm-4">
                 <a href="https://www.hostero.eu/tools" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
+          <a href="/assets/img/ico-smart-contracts-1.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/img/ico-smart-contracts-1.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">ICO Smart Contracts</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Aug. 2018</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://github.com/morion4000/truffle-crowdsale" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
@@ -135,6 +187,32 @@
               </div>
               <div class="col-sm-4">
                 <a href="https://github.com/morion4000/ophion" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
+          <a href="/assets/img/titanium-image-gallery-1.png" data-lightbox="gallery-mf">
+            <div class="work-img">
+              <img src="/assets/img/titanium-image-gallery-1.png" alt="" class="img-fluid">
+            </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">Titanium Image Gallery</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">May 2011</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://github.com/codeboxed/Titanium-Image-Gallery" target="_blank">
                   <div class="w-like">
                     <span class="ion-log-in"></span>
                   </div>
