--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -120,6 +120,32 @@
       </div>
       <div class="col-md-4">
         <div class="work-box">
+          <a href="/assets/img/webdollarminingpool-1.png" data-lightbox="gallery-mf">
+          <div class="work-img">
+            <img src="/assets/img/webdollarminingpool-1.png" alt="" class="img-fluid">
+          </div>
+          </a>
+          <div class="work-content">
+            <div class="row">
+              <div class="col-sm-8">
+                <h2 class="w-title">WebDollar Mining Pool</h2>
+                <div class="w-more">
+                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jun. 2018</span>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="https://www.webdollarminingpool.com" target="_blank">
+                  <div class="w-like">
+                    <span class="ion-log-in"></span>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="work-box">
           <a href="/assets/img/hostero-1.png" data-lightbox="gallery-mf">
           <div class="work-img">
             <img src="/assets/img/hostero-1.png" alt="" class="img-fluid">
