--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -26,11 +26,13 @@
                   <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
+                <!--
                 <span>Python (Django)</span> <span class="pull-right">60%</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
+                -->
                 <span>Solidity</span> <span class="pull-right">50%</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
@@ -51,11 +53,13 @@
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
+                <!--
                 <span>Microservices (Docker)</span> <span class="pull-right">80%</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
+                -->
               </div>
             </div>
             <div class="col-md-6">
@@ -73,6 +77,11 @@
                 </p>
                 <p class="lead">
                   I consider myself to be a hard-working generalist who operates autonomously and has high-risk tolerance.
+                </p>
+                <br />
+                <h5>Other skills</h5>
+                <p class="lead">
+                  Python, Django, TypeScript, Docker, Microservices, Rancher, Ethereum, PHP
                 </p>
               </div>
             </div>
