--- a/views/partials/testimonials.html
+++ b/views/partials/testimonials.html
@@ -20,7 +20,7 @@
           <div class="testimonial-box">
             <div class="author-test">
               <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-              <span class="author">Marta Socrate</span>
+              <span class="author">Marta Socrat</span>
             </div>
             <div class="content-test">
               <p class="description lead">
