--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -26,7 +26,7 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Personal Finance</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Feb 2020</span>
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Feb. 2020</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -52,7 +52,7 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Javascript Blockchain</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Jan 2020</span>
+                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Jan. 2020</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -78,7 +78,7 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Emint</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan 2020</span>
+                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan. 2020</span>
                 </div>
               </div>
               <div class="col-sm-4">
