--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -5,6 +5,7 @@
         <div class="box-shadow-full">
           <div class="row">
             <div class="col-md-6">
+              <!--
               <div class="row">
                 <div class="col-sm-6 col-md-5">
                   <div class="about-img">
@@ -19,21 +20,25 @@
                   </div>
                 </div>
               </div>
+              -->
               <div class="skill-mf">
-                <p class="title-s">Skills</p>
+                <!--<p class="title-s">Skills</p>-->
+                <div class="title-box-2">
+                  <h5 class="title-left">
+                    Skills
+                  </h5>
+                </div>
                 <span>Javascript (Node.js)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <!--
-                <span>Python (Django)</span> <span class="pull-right">60%</span>
+                <span>Python (Django)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                -->
-                <span>Solidity</span>
+                <span>Ethereum (Solidity)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                     aria-valuemax="100"></div>
@@ -43,32 +48,35 @@
                   <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>React</span>
+                <span>React (Typescript)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>Databases (SQL)</span>
+                <span>Databases (SQL / NoSQL)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <!--
-                <span>Microservices (Docker)</span> <span class="pull-right">80%</span>
+                <span>Microservices (Docker)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                -->
               </div>
             </div>
             <div class="col-md-6">
               <div class="about-me pt-4 pt-md-0">
                 <div class="title-box-2">
                   <h5 class="title-left">
-                    About me
+                    About
                   </h5>
                 </div>
+                <!--
+                <div class="about-img">
+                  <img src="/assets/img/avatar4.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                </div>
+                -->
                 <p class="lead">
                   Seasoned software developer with over ten years of experience in full-stack web development and systems architecture. I have worked on platforms ranging from mobile to web and desktop.
                 </p>
@@ -77,11 +85,6 @@
                 </p>
                 <p class="lead">
                   I consider myself to be a hard-working generalist who operates autonomously and has high-risk tolerance.
-                </p>
-                <br />
-                <h5>Other skills</h5>
-                <p class="lead">
-                  Python, Django, TypeScript, Docker, Microservices, Rancher, Ethereum, PHP
                 </p>
               </div>
             </div>
