--- a/views/index.html
+++ b/views/index.html
@@ -8,20 +8,7 @@
 <body id="page-top">
   {{> partials/header }}
 
-  <div id="home" class="intro route bg-image" style="background-image: url('/assets/img/overlay-bg.jpg')">
-    <div class="overlay-itro"></div>
-    <div class="intro-content display-table">
-      <div class="table-cell">
-        <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">Hi, I'm Ionut Moraru</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Web and Blockchain Developer</span><strong class="text-slider"></strong></p>
-          <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">Resume</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  {{> partials/intro }}
   {{> partials/about }}
   {{> partials/services }}
   {{> partials/statistics }}
