--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,7 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Crisan 25, Drobeta-Turnu Severin, Romania</li>
-                      <li><span class="ion-document"></span> MORARU F IONUT ADRIAN II, CUI: 34289656</li>
+                      <li><span class="ion-document"></span> MORARU F IONUT ADRIAN II, VAT: 34289656</li>
                       <li><span class="ion-email"></span> <a href="mailto:morion4000@gmail.com">morion4000@gmail.com</a></li>
                     </ul>
                   </div>
