--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -28,7 +28,7 @@
                     Skills
                   </h5>
                 </div>
-                <span>Javascript (Node.js)</span>
+                <span>Javascript / Typescript (Node.js)</span>
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
                     aria-valuemax="100"></div>
@@ -48,9 +48,9 @@
                   <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
-                <span>React (Typescript)</span>
+                <span>React</span>
                 <div class="progress">
-                  <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0"
+                  <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="40" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
                 <span>Databases (SQL / NoSQL)</span>
@@ -78,10 +78,15 @@
                 </div>
                 -->
                 <p class="lead">
-                  Seasoned software developer with over ten years of experience in full-stack web development and systems architecture. I have worked on platforms ranging from mobile to web and desktop.
+                  Seasoned software developer with over ten years of experience in full-stack web development and systems architecture.
                 </p>
                 <p class="lead">
-                  My current interests are Blockchain technologies, smart contracts, automation, and IT infrastructure. I got certified in Solidity development by <a href="https://consensys.net/academy/onlineprograms/" target="_blank">ConsenSys Academy Online Developer Program</a> in 2018.
+                  I have experience and enjoy working in the following domains:
+                  <ul>
+                    <li>Renewable energy</li>
+                    <li>Blockchain</li>
+                    <li>Fintech</li>
+                  </ul>
                 </p>
                 <p class="lead">
                   I consider myself to be a hard-working generalist who operates autonomously and has high-risk tolerance.
