--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      I am available for consulting work. Drop me a line if you need more information about my services or wish to get a quote.
+                      <!--I am available for consulting work.-->Drop me a line if you need more information about my services or wish to get a quote.
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Crisan 25, Drobeta-Turnu Severin, Romania</li>
