--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -76,7 +76,7 @@
           <div class="work-content">
             <div class="row">
               <div class="col-sm-8">
-                <h2 class="w-title">Emint</h2>
+                <h2 class="w-title">Eletronic Mint</h2>
                 <div class="w-more">
                   <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan. 2020</span>
                 </div>
