--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -78,18 +78,19 @@
                 </div>
                 -->
                 <p class="lead">
-                  Seasoned software developer with over ten years of experience in full-stack web development and systems architecture.
+                  Seasoned software developer working remotely, with over ten years of experience in projects and teams of all sizes.
                 </p>
                 <p class="lead">
-                  I have experience and enjoy working in the following domains:
+                  I consider myself to be a hard-working generalist who operates autonomously and has high stress tolerance.
+                </p>
+                <p class="lead">
+                  Domains of interest:
                   <ul>
                     <li>Renewable energy</li>
                     <li>Blockchain</li>
                     <li>Fintech</li>
+                    <li>Internet of things</li>
                   </ul>
-                </p>
-                <p class="lead">
-                  I consider myself to be a hard-working generalist who operates autonomously and has high-risk tolerance.
                 </p>
               </div>
             </div>
