--- a/views/partials/services.html
+++ b/views/partials/services.html
@@ -7,7 +7,7 @@
             Services
           </h3>
           <p class="subtitle-a">
-            Areas I am most proficient in.
+            My experience is strongly based (not limited to) on full stack web development.
           </p>
           <div class="line-mf"></div>
         </div>
@@ -22,7 +22,7 @@
           <div class="service-content">
             <h2 class="s-title">Development</h2>
             <p class="s-description text-center">
-              Full stack web applications, dashboards, APIs, chat bots, and automation.
+              Full stack web applications, dashboards, tools, APIs, bots, and automation scripts.
             </p>
           </div>
         </div>
