--- a/views/index.html
+++ b/views/index.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; 2020 <strong>Ionut Moraru</strong>. All Rights Reserved.</p>
+              <p class="copyright">&copy; 2020 <strong>Adrian Moraru</strong>. All Rights Reserved.</p>
               <div class="credits">
                 <a href="https://old.morion4000.com">Old site</a>
               </div>
