--- a/views/partials/intro.html
+++ b/views/partials/intro.html
@@ -4,9 +4,14 @@
     <div class="table-cell">
       <div class="container">
         <!--<p class="display-6 color-d">Hello, world!</p>-->
-        <h1 class="intro-title mb-4">Hi, I'm Ionut Moraru</h1>
-        <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer,DevOps,Blockchain Developer</span><strong class="text-slider"></strong></p>
-        <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume (CV)</a></p>
+        <h1 class="intro-title mb-4">Hi, I'm Adrian</h1>
+        <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer,DevOps Engineer,Blockchain Developer</span><strong class="text-slider"></strong></p>
+        <p class="pt-3">
+            <div class="about-img">
+                <img src="/assets/img/avatar4.jpg" class="img-fluid rounded b-shadow-a" alt="" style="height:80px!important" />
+            </div>
+            <!--<a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume (CV)</a>-->
+        </p>
       </div>
     </div>
   </div>
