--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -6,8 +6,11 @@
           <h3 class="title-a">
             Portfolio
           </h3>
+
           <p class="subtitle-a">
-            List with most notable personal projects.
+            <p>This is a list with most notable <strong>personal</strong> projects.</p>
+            For projects that I worked on as a consultant,
+            <br />you can check out <a href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf">my resume</a> or <a href="#contact">contact me</a>.
           </p>
           <div class="line-mf"></div>
         </div>
@@ -26,7 +29,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Personal Finance</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Feb. 2020</span>
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Feb. 2020</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -37,6 +41,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>React + Highcharts dashboard that keeps track of income vs expenses and shows diagrams and charts to help you get a grasp on your financial situation.</p>
           </div>
         </div>
       </div>
@@ -52,7 +58,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Javascript Blockchain</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Jan. 2020</span>
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Jan. 2020</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -63,6 +70,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Naive implementation of a Blockchain in Javascript, for learning purposes. It tries to simplify the complex technology stack and concepts of a real Blockchain.</p>
           </div>
         </div>
       </div>
@@ -76,9 +85,10 @@
           <div class="work-content">
             <div class="row">
               <div class="col-sm-8">
-                <h2 class="w-title">Eletronic Mint</h2>
+                <h2 class="w-title">Electronic Mint</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jan. 2020</span>
+                    <span class="w-ctegory">Product Development</span><br />
+                    <span class="w-date">Jan. 2020</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -89,6 +99,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>React + Web3 dashboard to safely deploy your ERC20 smart contracts to private, testnet or mainnet using browser compatible wallets.</p>
           </div>
         </div>
       </div>
@@ -104,7 +116,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Telegram Tip Bot</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Sep. 2019</span>
+                    <span class="w-ctegory">Product Development</span><br />
+                    <span class="w-date">Sep. 2019</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -115,6 +128,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Telegram bot (Node.js + MySQL) for making tips and stake WebDollar (WEBD) cryptocurrency.</p>
           </div>
         </div>
       </div>
@@ -130,7 +145,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">WebDollar Tools</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Feb. 2019</span>
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Feb. 2019</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -156,7 +172,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">ICO Smart Contracts</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Aug. 2018</span>
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Aug. 2018</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -182,7 +199,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">WebDollar Mining Pool</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Jun. 2018</span>
+                    <span class="w-ctegory">Product Development</span><br />
+                    <span class="w-date">Jun. 2018</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -208,7 +226,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Hostero</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Product Development</span> / <span class="w-date">May 2018</span>
+                    <span class="w-ctegory">Product Development</span><br />
+                    <span class="w-date">May 2018</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -219,6 +238,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Platform (written in AngularJS, Node.js, Docker, and Rancher) to deploy &amp; manage miners for CPU mineable cryptocurrencies.</p>
           </div>
         </div>
       </div>
@@ -234,7 +255,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Molamp</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Product Development</span> / <span class="w-date">Feb. 2016</span>
+                    <span class="w-ctegory">Product Development</span><br />
+                    <span class="w-date">Feb. 2016</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -245,6 +267,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Web application built with Ruby on Rails, CoffeeScript, Twitter Bootstrap 2, and Backbone.js.</p>
           </div>
         </div>
       </div>
@@ -260,7 +284,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Ophion</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Apr. 2014</span>
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Apr. 2014</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -271,6 +296,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Web application build on Django (MySQL + RabbitMQ) which connects to themoviedb.org API to get movies data.</p>
           </div>
         </div>
       </div>
@@ -286,7 +313,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">Titanium Image Gallery</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">May 2011</span>
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">May 2011</span>
                 </div>
               </div>
               <div class="col-sm-4">
@@ -312,7 +340,8 @@
               <div class="col-sm-8">
                 <h2 class="w-title">SwarGame</h2>
                 <div class="w-more">
-                  <span class="w-ctegory">Software Development</span> / <span class="w-date">Aug. 2007</span>
+                    <span class="w-ctegory">Software Development</span><br />
+                    <span class="w-date">Aug. 2007</span>
                 </div>
               </div>
               <div class="col-sm-4">
