--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -14,7 +14,7 @@
                 </div>
                 <div class="col-sm-6 col-md-7">
                   <div class="about-info">
-                    <p><span class="title-s">Name: </span> <span>Ionut Moraru</span></p>
+                    <p><span class="title-s">Name: </span> <span>Adrian Moraru</span></p>
                     <p><span class="title-s">Profile: </span> <span>Software Developer</span></p>
                     <p><span class="title-s">Email: </span> <span><a href="mailto:morion4000@gmail.com">morion4000@gmail.com</a></span></p>
                   </div>
@@ -92,6 +92,9 @@
                     <li>Internet of things</li>
                   </ul>
                 </p>
+
+                <br />
+                <a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Adrian_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume (CV)</a>
               </div>
             </div>
           </div>
