--- a/views/partials/avatar.html
+++ b/views/partials/avatar.html
@@ -7,7 +7,7 @@
           <div class="testimonial-box">
             <div class="author-test">
               <img src="/assets/img/avatar4.jpg" alt="" class="rounded-circle b-shadow-a" style="height:200px">
-              <span class="author">Ionut Moraru</span>
+              <span class="author">Adrian Moraru</span>
             </div>
             <div class="content-test">
               <p class="description lead">
