--- a/views/partials/intro.html
+++ b/views/partials/intro.html
@@ -7,10 +7,13 @@
         <h1 class="intro-title mb-4">Hi, I'm Adrian</h1>
         <p class="intro-subtitle"><span class="text-slider-items">Full Stack Developer,DevOps Engineer,Blockchain Developer</span><strong class="text-slider"></strong></p>
         <p class="pt-3">
-            <div class="about-img">
-                <img src="/assets/img/avatar4.jpg" class="img-fluid rounded b-shadow-a" alt="" style="height:80px!important" />
-            </div>
-            <!--<a class="btn btn-primary btn js-scroll px-4" href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf" target="_blank" role="button">View Resume (CV)</a>-->
+          <div class="about-img">
+            <a href="/assets/img/avatar4.jpg" data-lightbox="gallery-mf">
+              <div class="work-img">
+                <img src="/assets/img/avatar4.jpg" class="img-fluid rounded b-shadow-a" alt="" style="height:100px!important" />
+              </div>
+            </a>
+          </div>
         </p>
       </div>
     </div>
