--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -157,6 +157,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Open source software developed for the WebDollar ecosystem. It also includes Docker images.</p>
           </div>
         </div>
       </div>
@@ -184,6 +186,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Heavily tested crowdsale smart contracts written on Ethereum using Ganache and Solidity.</p>
           </div>
         </div>
       </div>
@@ -211,6 +215,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software. It also includes custom software that displays stats for miners.</p>
           </div>
         </div>
       </div>
@@ -325,6 +331,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>Titanium Image Gallery for iPhone and iPad is a Javascript module for native mobile applications built on the Titanium platform.</p>
           </div>
         </div>
       </div>
@@ -352,6 +360,8 @@
                 </a>
               </div>
             </div>
+            <hr />
+            <p>SWar is a MMOTBS game playable in the browser built with Javascript, jQuery, PHP, and MySQL.</p>
           </div>
         </div>
       </div>
