--- a/views/partials/about.html
+++ b/views/partials/about.html
@@ -78,7 +78,7 @@
                 </div>
                 -->
                 <p class="lead">
-                  Seasoned software developer working remotely, with over ten years of experience in projects and teams of all sizes.
+                  Seasoned software developer working remotely, with over ten years of experience in startups and small teams.
                 </p>
                 <p class="lead">
                   I consider myself to be a hard-working generalist who operates autonomously and has high stress tolerance.
