--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -27,7 +27,7 @@
           <div class="work-content">
             <div class="row">
               <div class="col-sm-8">
-                <h2 class="w-title">Personal Finance</h2>
+                <h2 class="w-title">Money Streams</h2>
                 <div class="w-more">
                     <span class="w-ctegory">Software Development</span><br />
                     <span class="w-date">Feb. 2020</span>
