--- a/views/partials/services.html
+++ b/views/partials/services.html
@@ -35,7 +35,7 @@
           <div class="service-content">
             <h2 class="s-title">DevOps</h2>
             <p class="s-description text-center">
-              Cloud computing, microservices, virtualisation and containerisation.
+              Cloud computing, microservices, virtualisation, and containerisation.
             </p>
           </div>
         </div>
