--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -10,7 +10,7 @@
           <p class="subtitle-a">
             <p>This is a list with most notable <strong>personal</strong> projects.</p>
             For projects that I worked on as a consultant,
-            <br />you can check out <a href="/assets/pdf/Ionut_Moraru_Resume_2020.pdf">my resume</a> or <a href="#contact">contact me</a>.
+            <br />you can check out <a href="/resume">my resume</a> or <a href="#contact">contact me</a>.
           </p>
           <div class="line-mf"></div>
         </div>
