--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -129,7 +129,7 @@
               </div>
             </div>
             <hr />
-            <p>Telegram bot (Node.js + MySQL) for making tips and stake WebDollar (WEBD) cryptocurrency.</p>
+            <p>Telegram bot (Node.js + MySQL + Serverless) for making tips, staking, and buying WebDollar (WEBD) cryptocurrency. It has 2000 users and has processed over $150,000 in tips.</p>
           </div>
         </div>
       </div>
@@ -216,7 +216,7 @@
               </div>
             </div>
             <hr />
-            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software. It also includes custom software that collects and displays stats for miners.</p>
+            <p>WMP is an infrastructure project that runs the official WebDollar mining pool software with over 50 miners. It also includes custom software that collects and displays stats for miners.</p>
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
               </div>
             </div>
             <hr />
-            <p>Platform (written in AngularJS, Node.js, Docker, and Rancher) to deploy &amp; manage miners for CPU mineable cryptocurrencies.</p>
+            <p>Platform (written in AngularJS, Node.js, Docker, and Rancher) to deploy &amp; manage miners for CPU mineable cryptocurrencies. It has over 8000 registered users and has deployed over 300,000 miners.</p>
           </div>
         </div>
       </div>
