--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -129,7 +129,7 @@
               </div>
             </div>
             <hr />
-            <p>Telegram bot (Node.js + MySQL + Serverless) for making tips, staking, and buying WebDollar (WEBD) cryptocurrency. It has 2000 users and has processed over $150,000 in tips.</p>
+            <p>Telegram bot (Node.js + MySQL + Serverless) for making tips, staking, and buying WebDollar (WEBD) cryptocurrency. It has 2,000 users and has processed over $150,000 in tips.</p>
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
               </div>
             </div>
             <hr />
-            <p>Platform (written in AngularJS, Node.js, Docker, and Rancher) to deploy &amp; manage miners for CPU mineable cryptocurrencies. It has over 8000 registered users and has deployed over 300,000 miners.</p>
+            <p>Platform (written in AngularJS, Node.js, Docker, and Rancher) to deploy &amp; manage miners for CPU mineable cryptocurrencies. It has 8,000 registered users and has deployed over 300,000 miners.</p>
           </div>
         </div>
       </div>
