--- a/views/partials/projects.html
+++ b/views/partials/projects.html
@@ -42,7 +42,7 @@
               </div>
             </div>
             <hr />
-            <p>HTML5 game written in Typescript + Phaser 3 of the Tower Defense genre. It is packaged for Android using CapacitatorJS.</p>
+            <p>HTML5 game written in Typescript + Phaser 3 of the Tower Defense genre. It is packaged for Android using CapacitorJS.</p>
           </div>
         </div>
       </div>
